// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Footer should render correctly 1`] = `
"<div class=\\"card \\"><div class=\\"content \\"><p>card</p><style>
        .content {
          width: 100%;
          padding: 16px 16px;
        }

        .content > :global(*:first-child) {
          margin-top: 0;
        }

        .content > :global(*:last-child) {
          margin-bottom: 0;
        }
      </style></div><footer class=\\"auto-margin \\">footer<style>
        footer {
          padding: 8px 16px;
          display: flex;
          align-items: center;
          overflow: hidden;
          color: inherit;
          background-color: inherit;
          font-size: 1rem;
          border-top: 1px solid #eaeaea;
          border-bottom-left-radius: 4px;
          border-bottom-right-radius: 4px;
          min-height: calc(2.5 * 16px);
        }

        .auto-margin :global(*) {
          margin-top: 0;
          margin-bottom: 0;
          margin-right: 4px;
        }
      </style></footer><style>
        .card {
          background: #fff;
          margin: 0;
          padding: 0;
          width: 100%;
          transition: all 0.2s ease;
          border-radius: 4px;
          box-shadow: 8px 12px 16px rgba(0, 0, 0, 0.08);
          box-sizing: border-box;
          color: #282d30;
          background-color: #fff;
          border: 2px solid transparent;
        }

        .card:hover {
          box-shadow: 8px 12px 16px rgba(0, 0, 0, 0.08);
          background-color: #fff;
          border: 2px solid transparent;
        }

        .card :global(img) {
          width: 100%;
        }

        .card :global(.image) {
          border-bottom-left-radius: 0;
          border-bottom-right-radius: 0;
        }
      </style></div>"
`;

exports[`Card Footer should work with disable-auto-margin 1`] = `
"<footer class=\\" \\">footer<style>
        footer {
          padding: 8px 16px;
          display: flex;
          align-items: center;
          overflow: hidden;
          color: inherit;
          background-color: inherit;
          font-size: 1rem;
          border-top: 1px solid #eaeaea;
          border-bottom-left-radius: 4px;
          border-bottom-right-radius: 4px;
          min-height: calc(2.5 * 16px);
        }

        .auto-margin :global(*) {
          margin-top: 0;
          margin-bottom: 0;
          margin-right: 4px;
        }
      </style></footer>"
`;
